# dlkoopman

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: isort.yml  pytest.yml  python-app.yml
deepk/: config.py  core.py  data.py  deepk.py  errors.py  hyp_search.py  losses.py  nets.py  state_predictor.py  subnets.py  trajectory_predictor.py  utils.py
dlkoopman/: __init__.py  config.py  hyp_search.py  metrics.py  nets.py  state_pred.py  state_predictor.py  traj_pred.py  trajectory_predictor.py  utils.py
docs/: config.html  core.html  errors.html  hyp_search.html  index.html  losses.html  main.html  metrics.html  nets.html  state_pred.html  state_predictor.html  traj_pred.html  trajectory_predictor.html  utils.html
examples/: README.md
examples/discrete_spectrum/: run.py
examples/naca0012/: hyp_search.ipynb  run.ipynb  run.py
examples/state_pred_naca0012/: data.pkl  hyp_search.ipynb  run.ipynb
examples/state_predictor_naca0012/: hyp_search.ipynb  run.ipynb
examples/traj_pred_polynomial_manifold/: hyp_search.ipynb  run.ipynb
examples/trajectory_predictor_discrete_spectrum/: hyp_search.ipynb  run.ipynb
examples/trajectory_predictor_polynomial_manifold/: hyp_search.ipynb  run.ipynb
tests/: ref_dk_stats.pkl  ref_hyp_search_results.csv  ref_tp_stats.pkl  test_config.py  test_core.py  test_data.py  test_errors.py  test_hyp_search.py  test_losses.py  test_metrics.py  test_state_pred.py  test_state_predictor.py  test_traj_pred.py  test_trajectory_predictor.py  test_utils.py
(+6 files in other folders)
